--- a/public/exercise.html
+++ b/public/exercise.html
@@ -84,6 +84,7 @@
   </div>
   <script src="/api.js"></script>
   <script src="/index.js"></script>
+  <script src="/exercise.js"></script>
 </body>
 
 </html>
